--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "bootstrap-validator": "^0.11.9",
+    "jquery": "^3.2.1",
+    "wowjs": "^1.1.3"
   }
 }
